Added examples section

--- a/Home.html
+++ b/Home.html
@@ -29,6 +29,7 @@
                         <li class="active"><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#tools">Tools</a></li>
+                        <li><a href="#examples">Examples</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -141,6 +142,22 @@
         <h2 class="featurette-heading">For better code, you need the best tools. <span class="text-muted">And a very large tool belt.</span></h2>
         <p class="lead">
             Just Better Code uses Agile methods to determine the right tools for the job. Meaning find the tool that works for the task at hand with the lowest impact and investment. This way if and when the requirements change, we are ready to change with them. Some of the technologies we have used to achieve prior goals are: AngularJS, KnockoutJS, BackboneJS, jQuery, jQueryUI, Bootstrap, HTML5, AJAX, Razor, C#, MVC, TeamCity, nUnit, Git, TFS, JavaScript, CSS, ASP, PHP, JSP, and Java.
+        </p>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <a id="examples"></a>
+    <div class="featurette">
+        <h2 class="featurette-heading nacho"><a href="/Dallas">Nacho Business</a></h2>
+        <p class="lead">
+            Nacho Business is a prototype AngularJS online ordering system. The key features are custom
+            routing, responsive display, a menu based on a factory, and customized views based on inventory.
+        </p>
+        <h2 class="featurette-heading mantra"><a href="/BodyMantra">Body Mantra</a></h2>
+        <p class="lead">
+            Body Mantra is a Wordpress CMS site for a massage therapy business in the Roaring Fork Valley of
+            Colorado. It features a customized theme and a custom responsive slideshow widget.
         </p>
     </div>
 
