--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
                         <li class="active"><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#tools">Tools</a></li>
-                        <li><a href="#examples">Examples</a></li>
+                        <li><a href="#examples">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -115,7 +115,7 @@
             <img class="img-circle" alt="Contact us" style="width: 140px; height: 140px;" src="img/Index/email-small.jpg">
             <h2>Contact us</h2>
             <p>
-                Email or call Just Better Code to learn more and to see if Just Better Code can help you. Fax? If those even still exist, just fax documents to your email address and send us an email.
+                Does your product need a good user experience? Email or call Just Better Code to learn more and to see if Just Better Code can help you or if you have any questions or comments.
             </p>
             <p><a class="btn btn-default" href="#contact">Contact us&raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -149,6 +149,8 @@
 
     <a id="examples"></a>
     <div class="featurette">
+        <h2 class="featurette-heading">Browse our side projects. <span class="text-muted">Don't just take our word for it.</span></h2>
+        <p></p>
         <h2 class="featurette-heading nacho"><a href="/Dallas">Nacho Business</a></h2>
         <p class="lead">
             Nacho Business is a prototype AngularJS online ordering system. The key features are custom
@@ -166,9 +168,9 @@
     <a id="contact"></a>
     <div class="featurette">
         <img class="featurette-image img-circle pull-right" alt="Contact Us" style="width: 512px; height: 512px;" src="img/Index/email.png">
-        <h2 class="featurette-heading">Send us a line. <span class="text-muted">Get the code you deserve.</span></h2>
+        <h2 class="featurette-heading">Send us a line. <span class="text-muted">Get the code you want.</span></h2>
         <p class="lead">
-            Email or call us any time. If you call and can't reach anyone, leave a message so we know that you are not a telemarketer and can get back to you quickly with an accurate response.
+            Email or call us any time. If you call and can't reach anyone, leave a message. Fax number? Just scan the fax and send them to the email address below.
         </p>
         <dl>
             <dt>Email</dt>
@@ -190,14 +192,10 @@
     <!-- FOOTER -->
     <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Just Better Code &middot; <a href="mailto:iwant@justbettercode.com" target="_blank">iwant@justbettercode.com</a> &middot; <a href="tel:9709301539">970.930.1539</a></p>
+        <p>&copy; 2014 Just Better Code &middot; <a href="mailto:iwant@justbettercode.com" target="_blank">iwant@justbettercode.com</a> &middot; <a href="tel:9709301539">970.930.1539</a></p>
     </footer>
 
 </div><!-- /.container -->
-
-
-
-
 
       <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
 </body>
