--- a/Home.html
+++ b/Home.html
@@ -83,7 +83,7 @@
     </div>
     <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
     <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-</div>--><!-- /.carousel -->
+</div>--><!-- /.carousel>
 
 
 
@@ -151,6 +151,11 @@
     <div class="featurette">
         <h2 class="featurette-heading">Browse our side projects. <span class="text-muted">Don't just take our word for it.</span></h2>
         <p></p>
+        <h2 class="featurette-heading cfw"><a href="/Colorado%20Fashion%Week">Colorado <b>Fashion</b> Week</a></h2>
+        <p class="lead">
+            This a site for Colorado Fashion Week. It incorporates AngularJS, jQuery, BigVideoJS, and Social Stream.
+            The CSS is built using LESS, and the responsive design is powered by Twitter-Bootstrap.
+        </p>
         <h2 class="featurette-heading nacho"><a href="/Dallas">Nacho Business</a></h2>
         <p class="lead">
             Nacho Business is a prototype AngularJS online ordering system. The key features are custom
