Added CFW styles

--- a/Home.html
+++ b/Home.html
@@ -151,7 +151,7 @@
     <div class="featurette">
         <h2 class="featurette-heading">Browse our side projects. <span class="text-muted">Don't just take our word for it.</span></h2>
         <p></p>
-        <h2 class="featurette-heading cfw"><a href="/Colorado%20Fashion%Week">Colorado <b>Fashion</b> Week</a></h2>
+        <h2 class="featurette-heading cfw"><a href="/Colorado%20Fashion%20Week">Colorado <b>Fashion</b> Week</a></h2>
         <p class="lead">
             This a site for Colorado Fashion Week. It incorporates AngularJS, jQuery, BigVideoJS, and Social Stream.
             The CSS is built using LESS, and the responsive design is powered by Twitter-Bootstrap.
