--- a/dev/index.html
+++ b/dev/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="jbcModule">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Just Better Code: Like Ordinary Software, Just Better</title>
+    <link href='http://fonts.googleapis.com/css?family=Quicksand|Pacifico|Open+Sans' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/font-awesome.min.css" type="text/css" rel="stylesheet">
     <link href="css/global.css" type="text/css" rel="stylesheet">
 
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-route.min.js"></script>
+    <script src="js/routing.js"></script>
 </head>
 <body>
 <nav class="navbar-fixed-top nav">
@@ -19,44 +23,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Just Better Code</a>
+            <a class="navbar-brand" href="#"><h1 class="brand">Just Better <code>Code</code></h1></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#tools">Tools</a></li>
-                <li><a href="#examples">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li ng-class="{ active: isActive('/')}">
+                    <a href="./#/">Home</a>
+                </li>
+                <li ng-class="{ active: isActive('/projects')}">
+                    <a href="./#/projects">Projects</a>
+                </li>
+                <li ng-class="{ active: isActive('/partners')}">
+                    <a href="./#/partners">Partners</a>
+                </li>
+                <li ng-class="{ active: isActive('/contact')}">
+                    <a href="./#/contact">Contact</a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container content">
-
-    <h1>What is Just Better Code?</h1>
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="show-case">
-                <a class="fa-gear"></a>
-            </div>
-            <h2>technical</h2>
-
-        </div>
-        <div class="col-sm-4">
-            <div class="show-case">
-                <a class="fa-heart"></a>
-            </div>
-            <h2>emotional</h2>
-        </div>
-        <div class="col-sm-4">
-            <div class="show-case">
-                <a class="fa-pencil"></a>
-            </div>
-            <h2>artistic</h2>
-        </div>
-    </div>
+<div class="container content" ng-view>
 </div>
+<footer>
+
+    <span class="pull-right">Just Better Code &copy;2014</span>
+</footer>
 </body>
 </html>
