Contact page with form

--- a/dev/index.html
+++ b/dev/index.html
@@ -2,18 +2,21 @@
 <html ng-app="jbcModule">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Just Better Code: Like Ordinary Software, Just Better</title>
+    <title>Just Better Code: Like ordinary software, just better</title>
     <link href='http://fonts.googleapis.com/css?family=Quicksand|Pacifico|Open+Sans' rel='stylesheet' type='text/css'>
     <link href="css/bootstrap/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="css/font-awesome.min.css" type="text/css" rel="stylesheet">
     <link href="css/animations.css" type="text/css" rel="stylesheet">
     <link href="css/global.css" type="text/css" rel="stylesheet">
+    <link href="css/email.css" type="text/css" rel="stylesheet">
 
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-route.min.js"></script>
     <script src="js/lib/angular-animate.min.js"></script>
+    <script src="./js/nltext.js"></script>
+    <script src="./js/nlform.js"></script>
     <script src="js/routing.js"></script>
     <script src="js/controllers.js"></script>
 </head>
