--- a/logo.html
+++ b/logo.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title></title>
     <link href='http://fonts.googleapis.com/css?family=Quicksand|Pacifico|Open+Sans' rel='stylesheet' type='text/css'>
-    <link href="../css/global.css" type="text/css" rel="stylesheet">
+    <link href="css/global.css" type="text/css" rel="stylesheet">
 </head>
 <body style="background-color:white">
 <h1 style="color: orange; margin-bottom: 0">Just Better <code>Code</code></h1>
 <p style="color: orange; font-family: Quicksand; margin: 0 20px">Like ordinary software, just better</p>
 <p style="color: orange; font-family: Quicksand; margin: 0 60px">justbettercode.com</p>
+
+<h1 style="background-color: orange; color: #fff;">JB <code style="position: relative; left: -9px;">c</code></h1>
 </body>
 </html>
